Views per pagina amministrazione create

--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% block header %}
 <head>
       <title>Just Magna</title>
 
@@ -14,3 +15,4 @@
         integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
         crossorigin="anonymous"></script>
 </head>
+{% endblock %}
