--- a/templates/catalog/dish_detail.html
+++ b/templates/catalog/dish_detail.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 
 {% block content %}
-   <div class="container">
+   <div class="container dish-details">
         <div class="row">
 
     <h1>Nome del Piatto: {{ dish.name }}</h1>
-    <img src="{{ dish.image.url }}" class="card-img-left dish-detail-photo" alt="...">
+    <img src="{{ dish.image.url }}" class="card-img dish-detail-photo" alt="...">
     <p><strong>Descrizione:</strong> {{ dish.descrizione }}</p>
     {% comment %} <p><strong>Gluten Free:</strong> {{ dish.gluten_free }}</p>
     <p><strong>Vegetariano:</strong> {{ dish.vegetarian }}</p>
