--- a/templates/catalog/dish_list.html
+++ b/templates/catalog/dish_list.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-    <div class="container my-5 text-center" style="max-width:580px">
+    <div class="container my-5 text-center">
         <h1>Magna che te passa!</h1>
         <p class="lead">
             Concediti ora una favolosa pausa ricca di sapore e di carboidrati. E'
