--- a/templates/catalog/ingredient_form.html
+++ b/templates/catalog/ingredient_form.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
-<div class="container">
-    <h1>Inserisci un ingrediente</h1>
+<div class="form-container">
     <form method="POST">
+        <h1>Inserisci un ingrediente</h1>
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit" class="btn btn-primary">Inserisci</button>
