--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -4,19 +4,20 @@
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6">
                     <div class="mb-4">
-                        <h5 class="mb-3" style="color: var(--aqua-accent)">Footy Shirt</h5>
-                        <p class="mb-0" style="color: #888">Il tuo negozio di maglie da calcio di fiducia. Qualità garantita e spedizione veloce in tutta Italia.</p>
+                        <h5 class="mb-3">Just Magna</h5>
+                        <p class="mb-0">Il cibo di fiducia. Qualità garantita e spedizione veloce in tutto il quartiere.</p>
                     </div>
                     <div class="mt-4">
                         <h6 class="mb-3">Newsletter</h6>
                         <div class="input-group">
-                            <input type="email" class="form-control bg-dark border-0 text-white" placeholder="La tua email" style="border-radius: 20px 0 0 20px;">
+                            <input type="email" class="form-control" placeholder="La tua email">
                             <button class="btn btn-primary" style="border-radius: 0 20px 20px 0;">Iscriviti</button>
                         </div>
                     </div>
                 </div>
+
                 <div class="col-lg-4 col-md-6">
-                    <h5 class="mb-3" style="color: var(--aqua-accent)">Link Utili</h5>
+                    <h5 class="mb-3">Link Utili</h5>
                     <div class="row">
                         <div class="col-6">
                             <ul class="list-unstyled">
@@ -35,8 +36,8 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <h5 class="mb-4" style="color: var(--aqua-accent)">Seguici</h5>
-                    <p class="mb-3" style="color: #888">Resta aggiornato sulle ultime novità e piatti deliziosi</p>
+                    <h5 class="mb-4">Seguici</h5>
+                    <p class="mb-0">Resta aggiornato sulle ultime novità e piatti deliziosi</p>
                     <div class="d-flex gap-3">
                         <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
                         <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
@@ -51,7 +52,7 @@
                     <small>&copy; 2025 Just Magna. Tutti i diritti riservati.</small>
                 </div>
                 <div class="col-md-6 text-center text-md-end mt-3 mt-md-0">
-                    <img src="./images/payment-methods.png" alt="Metodi di pagamento" height="24">
+                    {% comment %} <img src="./images/payment-methods.png" alt="Metodi di pagamento" height="24"> {% endcomment %}
                 </div>
             </div>
         </div>
