aggiunto bottone per form di aggiunta ingrediente

--- a/templates/catalog/dish_list.html
+++ b/templates/catalog/dish_list.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="row">
             {% for dish in object_list %}
-                {% include "partials/dish_card.html" with dish=dish %}
+                {% include "catalog/partials/dish_card.html" with dish=dish %}
             {% endfor %}
         </div>
     </div>
