--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -4,14 +4,14 @@
     <nav class="navbar">
         <div class="container-fluid">
             <a class="navbar-brand" href={% url 'home' %}>
-                <img src="{% static 'dishes/logo.png' %}"
+                <img class="logo" src="{% static 'dishes/logo.png' %}"
                      alt=""
                      width="60"
                      height="44"
-                     class="d-inline-block align-top">
+                >
             </a>
             <p class="nav-item">
-                <a class="nav-link" href="{% url 'ingredient-create' %}">Aggiungi ingrediente</a>
+                <a class="nav-link" href="{% url 'ingredient-list' %}">Amministrazione</a>
             </p>
         </div>
     </nav>
