--- a/templates/partials/sidebar.html
+++ b/templates/partials/sidebar.html
@@ -1,5 +1,5 @@
-{% block sidebar %}
+{% comment %} {% block sidebar %}
 <div class="sidenav">
   <a href="/">Home</a>
   <a href="/">Bella sta sidebar</a>
-{% endblock %} 
+{% endblock %}   {% endcomment %}
