--- a/templates/base.html
+++ b/templates/base.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
   {% include 'partials/header.html' %}
-
 <body>
+<div class="wrapper">
+
   {% include 'partials/navbar.html' %}
   {% block content %}{% endblock %}
 
   {% include 'partials/footer.html' %}
-
-</body>
   {% include 'partials/sidebar.html' %}
+</div>
+</body>
 </html>
+
  
