--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -1,5 +1,5 @@
 {% block footer %}
-    <footer class="footer py-5 mt-5">
+    <footer>
         <div class="container">
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6">
