--- a/templates/catalog/partials/ingredient_row.html
+++ b/templates/catalog/partials/ingredient_row.html
@@ -6,9 +6,13 @@
     <td>{% if ingredient.vegetarian %}SI{% else %}NO{% endif %}</td>
     <td>{% if ingredient.vegan %}SI{% else %}NO{% endif %}</td>
     <td>
-        <button class="button-ingredient" href="{% url 'ingredient-delete' ingredient.pk %}">Elimina</button>
+        <button type="button-ingredient">
+            <a href="{% url 'ingredient-delete' pk=ingredient.pk %}">Elimina</a>
+        </button>    
         <button class="button-ingredient">Modifica</button>
-        <a  class="button-ingredient" href="{% url 'ingredient-create' %}">Aggiungi</a>
+        <button type="button-ingredient">
+            <a  href="{% url 'ingredient-create' %}">Aggiungi</a>
+        </button>
         
     </td>
 </tr>
