--- a/templates/catalog/confirm_delete.html
+++ b/templates/catalog/confirm_delete.html
@@ -1,6 +1,14 @@
-<form method="post">{% csrf_token %}
-    <p>Are you sure you want to delete "{{ object }}"?</p>
-    {{ form }}
-    <input type="submit" value="Confirm">
-</form> 
-
+{% extends 'base.html' %}
+{% block content %}
+{% load static %}
+<div class="form-container">
+    <form class="delete-form" method="post">{% csrf_token %}
+        <p>Sei sicuro che vuoi eliminare "{{ object }}"?
+            <br><img class="img-penti" src="{% static 'dishes/penti.png' %}">
+        </p>
+        
+        {% comment %} {{ form }} {% endcomment %}
+        <input type="submit" value="Conferma">
+    </form> 
+</div>
+{% endblock %}
