--- a/templates/catalog/ingredient_update_form.html
+++ b/templates/catalog/ingredient_update_form.html
@@ -1,1 +1,9 @@
-Aggiorna ingrediente
+{% extends 'base.html' %}
+{% block content %}
+<div class="form-container">
+    <form method="post">{%csrf_token%}
+        {{ form.as_p }}
+        <input type="submit" value="Update">
+    </form>
+</div>
+{% endblock %}
