--- a/templates/catalog/ingredient_list.html
+++ b/templates/catalog/ingredient_list.html
@@ -3,7 +3,14 @@
     <div class= "ingredienti-header">
         <h1>Ingredienti Registrati</h1>
         <p>Lista di tutti gli ingredienti registrati a sistema</p>
+        
     </div>
+    <div class="add-button">
+        <button class="button-ingredient-add">
+            <a  href="{% url 'ingredient-create' %}">Aggiungi</a>
+        </button>
+    </div>
+    
     <table class="table">
     <thead class="thead-dark">
         <tr>
