--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -11,7 +11,8 @@
                 >
             </a>
             <p class="nav-item">
-                <a class="nav-link" href="{% url 'ingredient-list' %}">Amministrazione</a>
+                <a class="nav-link" href="{% url 'ingredient-list' %}">Amministrazione Ingredienti</a>
+                 <a class="nav-link" href="{% url 'dish-list' %}">Amministrazione Piatti</a>
             </p>
         </div>
     </nav>
