log in logout sulla navbar

--- a/templates/catalog/dish_form.html
+++ b/templates/catalog/dish_form.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class="form-container">
-    <form method="POST">
+    <form method="POST" enctype="multipart/form-data">
         <h1>Inserisci un Piatto</h1>
         <h4>Movite pure</h4>
         {% csrf_token %}
