forms per reinpostare password creati

--- a/templates/catalog/catalog_list.html
+++ b/templates/catalog/catalog_list.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block title %}Home{% endblock %}
 {% block content %}
     <div class="container my-5 text-center">
         <h1>Magna che te passa!</h1>
