--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -23,10 +23,12 @@
             <div class="login-logout">
                 {% if user.is_authenticated %}
                     <span class="navbar-text me-2">Ciao, {{ user.username }}!</span>
+                    <a href="{% url 'password_change' %}">Cambia Password</a>
                     <form action="{% url 'logout' %}" method="post" class="btn btn-outline-primary btn-sm">
                         {% csrf_token %}
                         <button type="submit">Logout</button>
                     </form>
+                    
                 {% else %}
                     <span class="navbar-text me-2">Non sei loggato, vergognati</span>
                     <a href="{% url 'login' %}" class="btn btn-primary btn-sm">Log In</a>
