--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,10 +1,12 @@
 {% extends 'base.html' %}
 {% block content %}
-<h2>Login</h2>
+<h1>Login</h1>
 
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Accedi</button>
+    <p><a href="{% url 'password_reset' %}">Password Reset</a></p>
 </form>
+
 {% endblock%}
