login logout e password change done

--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -1,4 +1,4 @@
-{% comment %} {% extends "base.html" %}
+{% extends "base.html" %}
 {% block title %}Change the password{% endblock %}
 
 {% block content %}
@@ -9,4 +9,4 @@
         {{ form.as_p }}
         <input type="submit" value="Salva la nuova password">
     </form>
-{% endblock %} {% endcomment %}
+{% endblock %}
