--- a/templates/registration/password_change_done.html
+++ b/templates/registration/password_change_done.html
@@ -1,8 +1,8 @@
-{% comment %} {% extends "base.html" %}
+{% extends "base.html" %}
 {% block title %}Password changed{% endblock %}
 
 {% block content %}
     <h1>Password cambiata con successo</h1>
     <p>La tua password è stata aggiornata correttamente</p>
     <p><a href="{% url 'login' %}">Accedi</a> con la nuova password.</p>
-{% endblock %} {% endcomment %}
+{% endblock %}
