--- a/templates/catalog/catalog_list.html
+++ b/templates/catalog/catalog_list.html
@@ -16,19 +16,20 @@
                 {% include "catalog/partials/dish_card.html" with dish=dish %}
             {% endfor %}
         </div>
-
     </div>
     <div class="paginator">
         {% if is_paginated %}
             <ul class="pagination">
                 {% if page_obj.has_previous %}
-                <li class="page-item">
-                    <a class="page-link" href="?page={{page_obj.previous_page_number}}">&laquo;</a>
-                </li>
-                {% endif %} 
+                    <li class="page-item">
+                        <a class="page-link" href="?page={{ page_obj.previous_page_number }}">&laquo;</a>
+                    </li>
+                {% endif %}
                 {% for i in paginator.page_range %}
                     {% if page_obj.number == i %}
-                        <li class="page-item"><a class="page-link active">{{ i }}</a></li>
+                        <li class="page-item">
+                            <a class="page-link active">{{ i }}</a>
+                        </li>
                     {% else %}
                         <li class="page-item">
                             <a class="page-link" href="?page={{ i }}">{{ i }}</a>
@@ -37,7 +38,7 @@
                 {% endfor %}
                 {% if page_obj.has_next %}
                     <li class="page-item">
-                        <a href="?page={{page_obj.next_page_number}}" class="page-link">&raquo;</a>
+                        <a href="?page={{ page_obj.next_page_number }}" class="page-link">&raquo;</a>
                     </li>
                 {% else %}
                     <li class="page-item disabled">
@@ -47,7 +48,6 @@
             </ul>
         {% endif %}
     </div>
-    
     {% comment %} <div class='pagination'>
         <span class="step-links">
             {% if page_obj.has_previous %}
@@ -66,8 +66,4 @@
 
         </span>
     </div> {% endcomment %}
-
-     
-
-
 {% endblock %}
