--- a/templates/catalog/partials/dish_card.html
+++ b/templates/catalog/partials/dish_card.html
@@ -1,6 +1,10 @@
 <div class="col-sm">
     <div class="card" style="width: 18rem;">
-        <img src="{{ dish.image.url }}" width="150" height="250" class="card-img-top" alt="...">
+        <img src="{{ dish.image.url }}"
+             width="150"
+             height="250"
+             class="card-img-top"
+             alt="...">
         <div class="card-body">
             <h2 class="card-title">{{ dish.name }}</h2>
             <p class="card-text">{{ dish.descrizione }}</p>
@@ -9,5 +13,3 @@
         </div>
     </div>
 </div>
-
-
