--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -15,22 +15,31 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="col-lg-4 col-md-6">
                     <h5 class="mb-3">Link Utili</h5>
                     <div class="row">
                         <div class="col-6">
                             <ul class="list-unstyled">
-                                <li class="mb-2"><a href="#" class="footer-link">Chi Siamo</a></li>
-                                <li class="mb-2"><a href="#" class="footer-link">Spedizioni</a></li>
+                                <li class="mb-2">
+                                    <a href="#" class="footer-link">Chi Siamo</a>
+                                </li>
+                                <li class="mb-2">
+                                    <a href="#" class="footer-link">Spedizioni</a>
+                                </li>
                                 {% comment %} <li class="mb-2"><a href="#" class="footer-link">Resi</a></li> {% endcomment %}
                             </ul>
                         </div>
                         <div class="col-6">
                             <ul class="list-unstyled">
-                                <li class="mb-2"><a href="#" class="footer-link">FAQ</a></li>
-                                <li class="mb-2"><a href="#" class="footer-link">Privacy</a></li>
-                                <li class="mb-2"><a href="#" class="footer-link">Contatti</a></li>
+                                <li class="mb-2">
+                                    <a href="#" class="footer-link">FAQ</a>
+                                </li>
+                                <li class="mb-2">
+                                    <a href="#" class="footer-link">Privacy</a>
+                                </li>
+                                <li class="mb-2">
+                                    <a href="#" class="footer-link">Contatti</a>
+                                </li>
                             </ul>
                         </div>
                     </div>
@@ -52,7 +61,9 @@
                     <small>&copy; 2025 Just Magna. Tutti i diritti riservati.</small>
                 </div>
                 <div class="col-md-6 text-center text-md-end mt-3 mt-md-0">
-                    {% comment %} <img src="./images/payment-methods.png" alt="Metodi di pagamento" height="24"> {% endcomment %}
+                    {% comment %} <img src="./images/payment-methods.png"
+      alt="Metodi di pagamento"
+      height="24"> {% endcomment %}
                 </div>
             </div>
         </div>
