--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -1,25 +1,23 @@
 {% block navbar %}
     {% load static %}
-    
     <nav class="navbar">
         <div class="container-fluid">
-            
-           
             <a class="navbar-brand" href="{% url 'home' %}">
                 <img class="logo"
-                    src="{% static 'dishes/logo.png' %}"
-                    alt="Logo"
-                    width="60"
-                    height="44">
+                     src="{% static 'dishes/logo.png' %}"
+                     alt="Logo"
+                     width="60"
+                     height="44">
             </a>
             <div class="admin-link">
-                <a class="nav-link" href="{% url 'ingredient-list' %}">Amministrazione Ingredienti</a>                
+                <a class="nav-link" href="{% url 'ingredient-list' %}">Amministrazione Ingredienti</a>
             </div>
-
             <div class="admin-link">
                 <a class="nav-link" href="{% url 'dish-list' %}">Amministrazione Piatti</a>
             </div>
-            
+            <div class="admin-link">
+                <a class="nav-link" href="{% url 'contact' %}">Contattaci</a>
+            </div>
             <div class="login-logout">
                 {% if user.is_authenticated %}
                     <span class="navbar-text me-2">Ciao, {{ user.username }}!</span>
@@ -28,7 +26,6 @@
                         {% csrf_token %}
                         <button type="submit" class="btn btn-primary ">Logout</button>
                     </form>
-                    
                 {% else %}
                     <span class="navbar-text me-2">Non sei loggato, vergognati</span>
                     <a href="{% url 'login' %}" class="btn btn-primary btn-sm">Log In</a>
