contattaci in footer

--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -24,6 +24,9 @@
                                     <a href="#" class="footer-link">Chi Siamo</a>
                                 </li>
                                 <li class="mb-2">
+                                    <a href="{% url 'contact' %}" class="footer-link">Contattaci</a>
+                                </li>
+                                <li class="mb-2">
                                     <a href="#" class="footer-link">Spedizioni</a>
                                 </li>
                                 {% comment %} <li class="mb-2"><a href="#" class="footer-link">Resi</a></li> {% endcomment %}
