--- a/templates/crm/success_survey.html
+++ b/templates/crm/success_survey.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
 {% block content %}
     <h1>Fantastico!</h1>
-    <p>Grazie per il tuo messaggio, non c'avevi niente di meglio da fare?</p>
+    <p>Grazie per il tuo feedback, ora vattene a quel paese</p>
 {% endblock %}
