survey page salva il feedback e checka se utenta ha un form registrato. in caso positivo, ritorna una pagina html. non ho creato una view per quest'ultima

--- a/templates/crm/survey_form.html
+++ b/templates/crm/survey_form.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
-    <h1>Contattaci</h1>
+    <h1>Survey Form</h1>
     <form method="post">
         {% csrf_token %}
-        {{ form }}
+        {{ form.as_p }}
         <div class="form-actions">
             <button type="submit">Invia</button>
         </div>
