--- a/templates/crm/survey_form.html
+++ b/templates/crm/survey_form.html
@@ -1,8 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
-    <h1>Survey Form</h1>
+    <h1>Survey</h1>
     <form method="post">
         {% csrf_token %}
+        <h2>Se vuoi, lasciaci un tuo feedback</h2>
         {{ form.as_p }}
         <div class="form-actions">
             <button type="submit">Invia</button>
