navbar aggiornata con dispatch per il survey in caso utente ha gia creato un survey in sistema

--- a/templates/crm/survey_form.html
+++ b/templates/crm/survey_form.html
@@ -6,7 +6,7 @@
         <h2>Hai dei suggerimenti per migliorare il nostro servizio?</h2>
         {{ form.as_p }}
         <div class="form-actions">
-            <button type="submit">Invia</button>
+            <button "submit" class="btn btn-primary">Invia il Survey</button>
         </div>
     </form>
 {% endblock %}
