--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -16,6 +16,9 @@
                 <a class="nav-link" href="{% url 'dish-list' %}">Amministrazione Piatti</a>
             </div>
             <div class="admin-link">
+                <a class="nav-link" href="{% url 'survey' %}">La tua Opinione</a>
+            </div>
+            <div class="admin-link">
                 <a class="nav-link" href="{% url 'contact' %}">Contattaci</a>
             </div>
             <div class="login-logout">
