--- a/templates/crm/unsuccess_form.html
+++ b/templates/crm/unsuccess_form.html
@@ -1,5 +1,5 @@
-{% extends 'base.html' %}
+{% comment %} {% extends 'base.html' %}
 {% block content %}
     <h1>Ce stai a prova?</h1>
     <p>Esiste gia un tuo survey, fatti una passeggiata</p>
-{% endblock %}
+{% endblock %} {% endcomment %}
