metodo get overridata in crm view per il survey, dispatch non andava bene

--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -48,7 +48,7 @@
                     </div>
                     {% comment %} LE PORTATE STANNO QUI ALEEEEE, NON TI ROVINARE LA VISTA {% endcomment %}
                     <h5 class="mb-3">Le Nostre Portate</h5>
-                    {% for course in all_courses %}
+                    {% for course in courses_list %}
                         <li class="mb-2">
                             <a href="">{{ course.title }}</a>
                         </li>
