--- a/templates/catalog/catalog_list.html
+++ b/templates/catalog/catalog_list.html
@@ -19,7 +19,7 @@
     </div>
     <div class="paginator">
         {% if is_paginated %}
-            <ul class="pagination">
+            <ul class="pagination justify-content-center">
                 {% if page_obj.has_previous %}
                     <li class="page-item">
                         <a class="page-link" href="?page={{ page_obj.previous_page_number }}">&laquo;</a>
