form creato, ora faccio la view per il cart

--- a/templates/catalog/dish_detail.html
+++ b/templates/catalog/dish_detail.html
@@ -43,6 +43,7 @@
                 <strong>Prezzo: $</strong> {{ dish.price }}
             </p>
         </div>
+        <a href="" class="btn btn-primary">Aggiungi al Carrello</a>
         {% if related_dishes %}
             <div class="container same-course">
                 <h2>Altri piatti della stessa portata:</h2>
