--- a/templates/catalog/partials/dish_card.html
+++ b/templates/catalog/partials/dish_card.html
@@ -10,6 +10,7 @@
             <p class="card-text">{{ dish.descrizione }}</p>
             <p class="card-text">${{ dish.price }}</p>
             <a href="{% url 'dish-detail' dish.pk %}" class="btn btn-primary">Dettagli</a>
+            <a href="" class="btn btn-secondary">Aggiungi al Carrello</a>
         </div>
     </div>
 </div>
