--- a/templates/crm/contact.html
+++ b/templates/crm/contact.html
@@ -1,11 +1,13 @@
 {% extends 'base.html' %}
 {% block content %}
-    <h1>Contattaci</h1>
-    <form method="post">
-        {% csrf_token %}
-        {{ form }}
-        <div class="form-actions">
-            <button type="submit">Invia</button>
-        </div>
-    </form>
+    <div class="container py-5 text-center">
+        <h1 class="mb-4 text-center">Contattaci</h1>
+        <form method="post" class="mx-auto">
+            {% csrf_token %}
+            <div class="mb-5">{{ form.as_p }}</div>
+            <div class="text-center">
+                <button type="submit" class="btn btn-primary">Invia</button>
+            </div>
+        </form>
+    </div>
 {% endblock %}
