--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -47,12 +47,6 @@
                         </div>
                     </div>
                     {% comment %} LE PORTATE STANNO QUI ALEEEEE, NON TI ROVINARE LA VISTA {% endcomment %}
-                    <h5 class="mb-3">Le Nostre Portate</h5>
-                    {% for course in courses_list %}
-                        <li class="mb-2">
-                            <a href="">{{ course.title }}</a>
-                        </li>
-                    {% endfor %}
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <h5 class="mb-4">Seguici</h5>
@@ -63,6 +57,14 @@
                         <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
                         <a href="#" class="social-icon"><i class="fab fa-youtube"></i></a>
                     </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <h5 class="mb-3">Le Nostre Portate</h5>
+                    {% for course in courses_list %}
+                        <li class="mb-2">
+                            <a href="">{{ course.title }}</a>
+                        </li>
+                    {% endfor %}
                 </div>
             </div>
             <hr class="my-5 footer-border">
