--- a/templates/catalog/dish_form.html
+++ b/templates/catalog/dish_form.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
 {% block content %}
     <div class="form-container">
         <form method="POST" enctype="multipart/form-data">
@@ -9,4 +9,4 @@
             <button type="submit" class="btn btn-primary">Inserisci</button>
         </form>
     </div>
-{% endblock %}
+{% endblock content %}
