--- a/templates/catalog/partials/dish_card.html
+++ b/templates/catalog/partials/dish_card.html
@@ -16,7 +16,7 @@
                    class="btn btn-outline-primary w-100 mb-2">
                     <i class="fas fa-info-circle me-2"></i> Dettagli
                 </a>
-                {% include 'ecommerce/partials/cart_form.html' %}
+                <div>{% include 'ecommerce/partials/cart_form.html' %}</div>
             </div>
         </div>
     </div>
