--- a/templates/ecommerce/partials/cart_form.html
+++ b/templates/ecommerce/partials/cart_form.html
@@ -1,6 +1,6 @@
-<form method="post" action="{% url 'add_to_cart' dish.id %}">
+<form method="post"action="{% url 'add_to_cart' dish.id %}">
     {% csrf_token %}
-    {{ form.as_p }}
+    {{ add_to_cart_form.as_p }}
     <button type="submit" class="btn btn-primary w-100">
         <i class="fas fa-shopping-cart me-2"></i> Aggiungi al Carrello
     </button>
