--- a/templates/ecommerce/partials/cart_form.html
+++ b/templates/ecommerce/partials/cart_form.html
@@ -1,4 +1,4 @@
-<form method="post"action="{% url 'add_to_cart' dish.id %}">
+<form method="post"action="{% url 'add_to_cart' %}">
     {% csrf_token %}
     {{ add_to_cart_form.as_p }}
     <button type="submit" class="btn btn-primary w-100">
