--- a/templates/ecommerce/cart_list.html
+++ b/templates/ecommerce/cart_list.html
@@ -11,6 +11,7 @@
                     <img src="{{ item.dish.image.url }}"
                          alt="{{ item.dish.name }}"
                          width="250"
+                         height="250"
                          class="rounded me-3">
                     <div class="flex-grow-1">
                         <strong>{{ item.dish.name }}</strong>
